--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tech Blog</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../../public/css/main.css">
 </head>
 <body>
     <header>Tech Blog</header>
@@ -11,7 +11,7 @@
         {{{ body }}}
     </main>
     <footer>
-        insert footer 
+        Insert Footer
     </footer>
 </body>
 </html>
